# Sift

./: .coverage  .gitignore  .python-version  Makefile  README.md  hello.py  make_sift.py  profiling_sift.prof  pyproject.toml  requirements.txt
debug_logs/: sample1_long.txt  sample2_long.txt  samplescript.txt
sift-lang/: language-configuration.json  package.json
sift-lang/syntaxes/: sift.tmLanguage.json
siftscripts/: ebay_use_case.sift  example.sift  jellycat.sift  lengthy_sample.sift  reddit_test.sift  sample1_long.sift  sample2_long.sift  samplescript.sift  sifty.sift  targets_only.sift  ujtest.sift
src/: .coverage  .env  main.py  prep.py
src/.hypothesis/tmp/: tmpkzc5bllx  tmplp6xcn9a
src/FileOperations/: SiftFile.py
src/IR/: instruction.py  ir_base.py  ir_format_conversion.py  ir_translator.py  read_tree.py
src/IR/instructions/: html_properties.py  instruction.py  low_level_ir.py
src/Language/: AST.py  CstmParseTree.py  ParseTree.py  Parser.py  SiftExcept.py  SiftFile.py  Tokenizer.py
src/Language/Exceptions/: HighLevelGrammarExceptions.py  InternalException.py  SiftFileExceptions.py  SyntaxExceptions.py
src/Language/HighLevelStructure/: HighLevelGrammar.py  HighLevelTree.py
src/Language/SiftStructures/: Codename.py  SiftTypes.py  SiftURL.py  TargetBlock.py  Targets.py
src/Language/Structs/: Action.py  ActionBlock.py  ActionTypes.py  Condition.py  Filter.py  FilterTypes.py  Grouping.py  ScriptTree.py  script_tree.py
src/Language/exceptions/: internal_exception.py
src/Language/high_level_structure/: HighLevelGrammar.py  HighLevelTree.py  high_level_grammar.py  high_level_tree.py
src/api/: action_block_heap_node.py  heap_node.py  sandboxing_queue.py  scrape_api.py  script_processor.py  target_heap_node.py
src/api/ipc_management/: consumer.py  ipc_manager.py  ipc_options.py  producer.py
src/api/language_api/: coordinator.py  script_processor.py  script_representations.py  worker.py
src/api/parsing_api/: coordinator.py  script_processor.py  worker.py
src/compiler/: compiler.py  intermediate_representation.py
src/extraction/: types.py
src/file_operations/: script_representations.py  sift_file.py
src/language/: grammar_container.py
src/language/IR/: ir_base.py  ir_format_conversion.py  ir_translator.py  read_tree.py
src/language/compiler/: compiler.py  compiler_exceptions.py  intermediate_representation.py  ir_base.py  types.py  (+2 more)
src/sandbox/: sandbox.py
src/scraping/: ir_translation_interface.py  ir_translator.py  make_request.py  scraper.py
src/shared/: broker.py  bytecode.py  registry.py
src/tests/: HighLevelParseTests.py  conftest.py  sift_file_test.py  test_bad_sift_file_construction.py  test_file_format.py  test_syntax_errors.py
(+109 files in other folders)
