[project]
name = "sift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark>=1.2.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
]
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E501", "W503"]
target-version = "py39"
[tool.setuptools]
package-dir = {"" = "src"}  # Use "src/" layout
packages = ["Language"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=src/Language --cov-report=html"
testpaths = [
    "src/tests"
]
