[project]
name = "sift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark>=1.2.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "pytest-check>=2.4.1",
]
[tool.ruff]
line-length = 88
lint.ignore = ["E501"]
target-version = "py313"
lint.select = ["E", "F", "W", "C", "N", "B"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5

[tool.setuptools]
package-dir = {"" = "src"}  # Use "src/" layout
packages = ["Language"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --capture=no --cov=src/Language --cov-report=html --tb=no"
testpaths = [
    "src/tests"
]

[tool.uv.sources]
sift = { workspace = true }

[dependency-groups]
dev = [
    "sift",
]
