[project]
name = "sift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark>=1.2.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "pytest-check>=2.4.1",
    "hypothesis>=6.125.1",
    "ujson>=5.10.0",
    "orjson>=3.10.15",
    "scrapling>=0.2.93",
    "swiftshadow>=2.0.1",
    "curl-cffi>=0.7.4",
    "selenium>=4.28.1",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
lint.ignore = ["E501"]
lint.select = ["E", "F", "W", "C", "N", "B", "I"]
target-version = "py313"

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
lines-between-types = 1

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 15

[tool.setuptools]
package-dir = {"" = "src"}  # Use "src/" layout
packages = ["Language"]

[tool.pytest.ini_options]
minversion = "6.0"
# --cov=src/Language --cov-report=html add when ready
addopts = "-ra -v --capture=no  --tb=short"
testpaths = [
    "src/tests"
]

[tool.uv.sources]
sift = { workspace = true }

[dependency-groups]
dev = [
    "sift",
]
